welcome.lessons.welcome.array.island.Island.scala.error
island:3: error: type mismatch;
 found   : Unit
 required: Int
  for (i <- 1 to num.length - 1) {
         ^